# RMML-Agriculture-Drone

vins_mavlink_bridge/: package.xml  setup.cfg  setup.py
vins_mavlink_bridge/vins_mavlink_bridge/: bridge_node.py
